--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,11 @@
 /* ==================== GOOGLE FONTS ==================== */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500&family=Quicksand:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
-
 /* ==================== VARIABLES CSS ==================== */
 :root {
     --header-height: 3rem;
 
     /*========== Colors ==========*/
-    --first-color: #407BFF;
+    --first-color: #ff6dce;
     --text-color-light: #fff;
     --text-color-dark: #000;
     --body-color: #FFFFFF;
@@ -227,11 +225,12 @@ header h1{
 }
 .about_me .aboutMe_content{
     display: grid;
-    justify-items: start;
+    /* justify-items: start; */
     justify-content: center;
+    justify-items: center;
 }
 .about_me .aboutMe_content .personal_info{
-    gap: 2rem;
+    gap: 1rem;
     justify-content: center;
 }
 .about_me h2,
@@ -378,6 +377,7 @@ footer div{
 footer div a{
     text-align: center;
     color: #fff;
+    font-size: 25px;
     text-shadow: 1px 1px #999;
 }
 /* ==================== RESPONSIVE ==================== */
@@ -413,6 +413,9 @@ footer div a{
     .about_me .aboutMe_content .personal_info {
         display: flex;
         flex-direction: column;
+    }
+    .card-slider0 .card img {
+        width: 135px;
     }
     header .personal_photo::before,
     header .personal_photo::after {
@@ -506,6 +509,7 @@ footer div a{
         flex-direction: column;
     }
     .about_me .upper-image {
+        top: 5rem;
         right: 0.5rem;
         max-width: 200px;
     }
@@ -515,6 +519,9 @@ footer div a{
     }
     .course_section .container {
         margin: 1rem;
+    }
+    .card-slider0 .card img {
+        width: 135px;
     }
     .slick-dots li {
         position: relative;
